--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
-version: '2.4' # run as whole environment
+# General purpose mattermost docker-compose setup
+version: '2.4'
 services:
   mysql:
     container_name: mattermost-mysql
